# geneweaver-legacy

./: .dockerignore  .gitignore  ARCHITECTURE_NOTES.md  Dockerfile  ImageMagick-7.0.10-28.x86_64.rpm  ImageMagick-libs-7.0.10-28.x86_64.rpm  Pipfile  README.md  VariantFinder.py  datagen.py  erl_crash.dump  filesModifiedInWebsiteRepo.txt  gitLogWebsite.txt  pyproject.toml  readme.md  skaffold.yaml  supervisord.conf  temp.html
curation-server/: .gitignore  ReadMe.md  RestoreLog.txt  curation_server.py  monarch.py  ncbo.py  settings.py
docs/: ARCHITECTURE_NOTES.md  curation-workflow.vsd
migration/: 100-CreateTable-pub-assignments.sql  102-CreateTable-gs-to-pub-assignment.sql  105-Delete-empty-orphaned-files.sql  107-Add-usr-column-is-guest.sql  107-Create-stubgenerators-table-in-production.sql  108-update-ontology-linkouts.sql  109-geneset-is-readable-updates.sql  110-geneset-to-ontology.sql  111-add-dismissed-to-notifications.sql  112-create-geneset-for-queue.sql  113-update-options-for-cs-mset.sql  114-add-sso-id-to-user-table.sql  114-create-FindVariants-tool_param-rows.sql  115-create-view-geneset2hom.sql  116-geneset-and-publication-full-text-search.sql  AlterTable_pub_assignments_001.sql  CreateTable_curation_assignments.sql  DeDupe_publication.sql  Remove_orphan_users.sql
results/: 01d979fe-dd7c-4c1d-bd1e-d325382dcf9c.txt  4d840c53-a122-40fd-9a3c-4fcabbc60bdc.dot  4d840c53-a122-40fd-9a3c-4fcabbc60bdc_gs.dot  9073a8b4-ddca-4df3-9517-b919297fd8b5.jac  acf86e1c-2c88-477c-8b13-b47aed5c7f3f.dot  acf86e1c-2c88-477c-8b13-b47aed5c7f3f_gs.dot  da0b61ca-a956-464d-983d-6beb0ef6fdf1.dot  da0b61ca-a956-464d-983d-6beb0ef6fdf1_gs.dot  df1c3c66-02ca-4f66-b34f-39317c9eea44.dot  df1c3c66-02ca-4f66-b34f-39317c9eea44.el  df1c3c66-02ca-4f66-b34f-39317c9eea44.el.profile  df1c3c66-02ca-4f66-b34f-39317c9eea44.graphml  df1c3c66-02ca-4f66-b34f-39317c9eea44.odemat
sample-configs/: Dockerfile  Dockerfile_Celery  Dockerfile_Database  create_development_database.sql  de-dupe-publication-table.sql  docker-compose.internal.yml  docker-compose.yml  docker-init.sh  install.sh  nginx.conf  requirements.txt  sphinx.conf  supervisord.conf  uwsgi.ini
src/: .geneweaverdb.py.swp  DataTablesServer.py~  Flatten_Ont_Relation.py  adminviews.py  adminviews.py~  annotator.py  application.py  application.py~  batch.py  batchFile.py  batch_new.py  config.py  curation_assignments.py  decorators.py  edgelist.py  error.py  error_handler.py  error_tracker.py  export_batch.py  genesetblueprint.py  genesetviewer.py  geneweaverdb.py  geneweaverdb.py~  get_geneset_hom_ids.py  gtexsvc.py  gw-exceptions.txt  new_batch.py  notifications.py  phenomemap.py  psygenet.py  pub_assignments.py  publication_generator.py  pubmed.py  pubmedsvc.py  report_bug.py  search.py  serverside.py~  toolcommon.py  uploader.py  uploadfiles.py  (+1 more)
tests/: README_FIRST  run-all-tests.sh  test_application.py  (+4 more)
(+499 files in other folders)
