[tool.poetry]
name = "geneweaver-legacy"
version = "1.3.0"
description = ""
authors = ["Alexander Berger <alexander.berger@jax.org>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = ">1"
flask-admin = "^1.6.1"
flask-restful = "^0.3.10"
xmlrunner = "^1.7.7"
sphinxapi-py3 = "^2.1.11"
wand = "^0.6.13"
bleach = "3.1.5"
psycopg2-binary = "^2.9.9"
urllib3 = "1.25.9"
celery = "4.4.2"
configparser = "5.0.0"
requests = "=2.23.0"
gunicorn = "^22.0.0"
jinja2 = "^3.1.4"
intermine = "^1.13.0"
pandas = "^2.2.2"
pydantic = "^2.7.3"
pydantic-settings = "^2.3.0"
authlib = "^1.3.1"
redis = "^5.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
