[project]
name = "geneweaver-legacy"
version = "1.5.19"
description = "The Geneweaver Web Application"
authors = [{name = "Alexander Berger", email = "alexander.berger@jax.org"}]
readme = "README.md"
requires-python = ">=3.9.2"
dependencies = [
    "flask>=3.1.1,<4.0",
    "flask-admin>=1.6.1,<2.0",
    "flask-restful>=0.3.10,<1.0",
    "xmlrunner>=1.7.7,<2.0",
    "sphinxapi-py3>=2.1.11,<3.0",
    "wand>=0.6.13,<1.0",
    "bleach>=6.2.0,<7.0",
    "psycopg2-binary>=2.9.9,<3.0",
    "urllib3>=2.5.0,<3.0",
    "celery>=5.5.3,<6.0",
    "configparser>=7.2.0,<8.0",
    "requests>=2.32.4,<3.0",
    "gunicorn>=23.0.0,<24.0",
    "jinja2>=3.1.6,<4.0",
    "intermine>=1.13.0,<2.0",
    "pandas>=2.2.2,<3.0",
    "pydantic>=2.7.3,<3.0",
    "pydantic-settings>=2.3.0,<3.0",
    "authlib>=1.6.0,<2.0",
    "redis>=5.0.6,<6.0",
    "cryptography>=45.0.5,<46.0",
    "setuptools>=78.1.1,<79.0",
]

[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"}
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
lint = [
    "ruff>=0.11.10",
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
